--- a/docs/style.css
+++ b/docs/style.css
@@ -1,2 +1,2 @@
-.volume-container{display:inline-block}.melody-container .mic-frequency{font-size:16px;font-weight:700}.volume-container{margin-bottom:10px}.youtube-container{display:inline-block}
+.melody-container .mic-frequency{font-size:16px;font-weight:700}
 /*# sourceMappingURL=style.css.map*/
