--- a/src/scss/trackTile.scss
+++ b/src/scss/trackTile.scss
@@ -15,6 +15,7 @@
                 position: absolute;
             }
             &:hover {
+                box-shadow: 0px 0px 16px grey;
                 .play-button {
                     display: block;
                 }
